--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "require": {
         "fabpot/goutte": "^4.0",
-        "amenadiel/jpgraph": "^4.1"
+        "spatie/browsershot": "^4.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.4"
